--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,9 @@
 <html>
-  <body>
+  <head>
+    <title>Terraforming Surfaces [003]</title>
     <link rel="stylesheet" href="./main.css" />
+  </head>
+  <body>
+    <div class="container loading"></div>
   </body>
 </html>
